--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Products</title>
+	<title>Document</title>
 </head>
 <body>
-	
+	{{{body}}}
 </body>
 </html>
